--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       <div class="main-navigation">
         <ul>
           <li><a href="studio.html">Studio</a></li>
-          <li><a href="goit-markup-hw-02/index.html">Portfolio</a></li>
+          <li>
+            <a href="https://madwtz.github.io/goit-markup-hw-02/">Portfolio</a>
+          </li>
           <li><a href="contacts.html">Contacts</a></li>
         </ul>
       </div>
