added studio file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </nav>
       <div class="main-navigation">
         <ul>
-          <li><a href="studio.html">Studio</a></li>
+          <li><a href="https://madwtz.github.io/goit-markup-hw-03/">Studio</a></li>
           <li>
             <a href="https://madwtz.github.io/goit-markup-hw-02/">Portfolio</a>
           </li>
